fixed wrong alignment of center's additional pop-up for mobile

--- a/src/components/addCenter/css/AddCenter.css
+++ b/src/components/addCenter/css/AddCenter.css
@@ -4,33 +4,11 @@
     padding: 0;
 }
 
-@media screen
-and (min-device-width: 1080px) {
-    .addCenter {
-        padding-bottom: 0;
-        overflow: hidden;
-        border-radius: 16px;
-    }
-}
-
-@media screen
-and (max-device-width: 1080px) {
-    .addCenter {
-        padding-bottom: 0;
-        overflow: hidden;
-        border-radius: 16px;
-        /*margin-left: -300vw;*/
-        /*margin-top: -250vh;*/
-        margin-block-end: auto;
-    }
-}
-
 .addCenter  .ant-modal-content {
     border-radius: 16px;
 }
 
 .addCenter .add-center-container {
-    display: flex;
     padding: 20px 40px 32px 24px;
     flex-direction: column;
     justify-content: space-between;
@@ -231,6 +209,26 @@ and (max-device-width: 1080px) {
 .addCenter .half {
     display: flex;
 }
+@media screen
+and (min-device-width: 1080px) {
+    .addCenter {
+        padding-bottom: 0;
+        overflow: hidden;
+        border-radius: 16px;
+    }
+}
+
+@media screen
+and (max-device-width: 1080px) {
+    .addCenter {
+        padding-bottom: 0;
+        overflow: hidden;
+        border-radius: 16px;
+        /*margin-left: -300vw;*/
+        /*margin-top: -250vh;*/
+        margin-block-end: auto;
+    }
+}
 
 @media screen and (max-width: 577px) {
     .addCenter .add-center-sider {
@@ -244,6 +242,10 @@ and (max-device-width: 1080px) {
     }
 
     .addCenter .side {
+        display: none;
+    }
+
+    .addCenter .side-mobile {
         display: flex;
         align-items: center;
         justify-content: flex-start;
